# to

./: Cargo.toml  README.md  SPEC.md  bash-completion.sh  source.sh
haskell/: to.cabal
haskell/.stack-work/install/x86_64-linux/lts-8.0/8.0.2/flag-cache/: aeson-1.0.2.1-1PgNnQdZpa7BG8cq9P3bMU  aeson-pretty-0.8.2-462yIiWLrrZ6FTUM1Vu54B  attoparsec-0.13.1.0-HCAgpBrKCLJ5li8FbfXxE1  base-compat-0.9.1-B9geVZFtCvE8ERS7UcvkRz  cmdargs-0.10.14-39NpGO5c3XuHJDHZnfj5mm  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  hashable-1.2.5.0-F4MWeNuv2sjJRqBd2T5ul4  integer-logarithms-1.0.1-IEHCuEd5sG4JjSjlx7m5JF  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  scientific-0.3.4.10-HRQd1hS6vMV6hvjSlMi8B0  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR  time-locale-compat-0.1.1.3-KZ1jqNx8uhlHjmuPPj6V1Y  to-0.1.0.0-7V4Sr7SPucu71y6k42rMXL  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  unordered-containers-0.2.7.2-8AmrySQXjRGF6VciYs51fM  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG
haskell/.stack-work/install/x86_64-linux/lts-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/to-0.1.0.0-7V4Sr7SPucu71y6k42rMXL/: Lib.dyn_hi  Lib.hi
haskell/.stack-work/install/x86_64-linux/lts-8.0/8.0.2/lib/x86_64-linux-ghc-8.0.2/to-0.1.0.0-s6lWm4OQzQLMVSltGlBs3/: Lib.dyn_hi  Lib.hi
haskell/.stack-work/install/x86_64-linux/lts-8.0/8.0.2/pkgdb/: package.cache  to-0.1.0.0-s6lWm4OQzQLMVSltGlBs3.conf
haskell/app/: Main.hs
haskell/src/: Lib.hs
lua/: main.lua
python/: main.py
rust/: .project  Cargo.toml  README.md
rust/src/: directory.rs  main.rs  serde_types.in.rs  settings.rs
src/: directory.rs  main.rs  settings.rs
test/: test.sh
