name:                to
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wildarch/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Daan de Graaf
maintainer:          daandegraaf9@gmail.com
copyright:           Copyright: (c) 2017-2020 Daan de Graaf
category:            Utilities
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , directory >= 1.3 && <= 2.0
                     , aeson >= 1.0 && <= 2.0
                     , aeson-pretty >= 0.8 && <= 0.9
                     , filepath >= 1.4 && <= 2.0
  default-language:    Haskell2010

executable haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , to
                     , directory >= 1.3 && <= 2.0
                     , filepath >= 1.4 && <= 2.0


  default-language:    Haskell2010

test-suite haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , to
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wildarch/to
